03-create.redis.client.pod.cli.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-client
spec:
  containers:
  - name: redis-client
    image: redis:7.2.4
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh"]
    args: 
      - "-c"
      - |
        bash /scripts/init-script.sh
        sleep infinity
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
    - name: script-volume
      mountPath: /scripts
  volumes:
  - name: script-volume
    configMap:
      name: redis-init-script
